# aoc

./: .gitignore  README.md
aoc21/: Cargo.toml  README.md
aoc22/: README.md
aoc23/: README.md
aoc24/: Cargo.toml  README.md  build.zig
aoc24/inputs/: res.zig
aoc24/src/: 10.rs  11.rs  12.rs  12.zig  13.rs  14.rs  15.rs  16.rs  16.zig  17.zig  18.rs  19.rs  20.rs  22.rs  3.zig  4.zig  5.zig  6.zig  7.rs  7.zig  8.rs  9.zig  testing.zig
aoc25/: gleam.toml  manifest.toml
aoc25/src/: fifth.gleam  first.gleam  fourth.gleam  ninth.gleam  second.gleam  seventh.gleam  sixth.gleam  tenth.gleam  third.gleam
aoc25/test/: fifth_test.gleam  first_test.gleam  fourth_test.gleam  ninth_test.gleam  second_test.gleam  seventh_test.gleam  sixth_test.gleam  tenth_test.gleam  third_test.gleam
