[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"
default-run = "8"

[[bin]]
name = "7"
path = "src/7.rs"

[[bin]]
name = "8"
path = "src/8.rs"

[[bin]]
name = "10"
path = "src/10.rs"

[[bin]]
name = "11"
path = "src/11.rs"

#[[bin]]
#name = "12"
#path = "src/12.rs"

[[bin]]
name = "13"
path = "src/13.rs"

[[bin]]
name = "15"
path = "src/15.rs"

[dependencies]
memoize = "0.4.2"
regex = "1.11.1"
